<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <TextView

        android:id="@+id/tvYourLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="50dp"
        android:text="YOUR LOGO"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgContact"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/ic_contact"
            tools:layout_editor_absoluteY="48dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPassword"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/ic_password" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:backgroundTint="@color/colorPrimary" />
    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_login_button"
        android:text="@string/label_sign_in" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/bg_register_button"
        android:text="@string/label_register" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/label_forgot_password"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvLabelSignInWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/label_login_with"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/vFacebook"
            android:background="@drawable/bg_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/imgFacebook"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_facebook" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/vGoogle"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/imgGoogle"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_google" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>